@@ -18,10 +18,10 @@ import com.nexters.moyeomoyeo.team_building.domain.repository.TeamRepository;
 import com.nexters.moyeomoyeo.team_building.domain.repository.UserRepository;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 
 @Service
 @RequiredArgsConstructor
@@ -32,14 +32,19 @@ public class TeamBuildingService {
 	private final UserRepository userRepository;
 
 	private static UserInfo makeUserInfo(User user) {
+		final List<String> choices = user.getChoices().stream()
+			.map(userChoice -> userChoice.getTeam().getTeamUuid())
+			.toList();
+
+		final String joinedTeamUuid = Objects.isNull(user.getTeam()) ? null : user.getTeam().getTeamUuid();
+
 		return UserInfo.builder()
 			.uuid(user.getUserUuid())
 			.userName(user.getName())
 			.position(user.getPosition())
-			.joinedTeamUuid(Objects.isNull(user.getTeam()) ? null : user.getTeam().getTeamUuid())
-			.choices(user.getChoices().stream()
-				.map(userChoice -> userChoice.getTeam().getTeamUuid())
-				.toList())
+			.choices(choices)
+			.joinedTeamUuid(joinedTeamUuid)
+			.isSelectedTeam(isSelectedTeam(choices, joinedTeamUuid))
 			.build();
 	}
 
@@ -58,6 +63,41 @@ public class TeamBuildingService {
 			.roomUrl(room.getRoomUuid())
 			.roundStatus(room.getRoundStatus())
 			.build();
+	}
+
+	private static boolean isValidUser(List<String> userUuids, List<User> pickedUsers) {
+		return pickedUsers.size() == userUuids.size();
+	}
+
+	public static boolean isSelectedTeam(List<String> choices, String joinedTeamUuid) {
+		if (CollectionUtils.isEmpty(choices)) {
+			return false;
+		}
+
+		return choices.contains(joinedTeamUuid);
+	}
+
+	/**
+	 * 선택된 유저가 현재 라운드에서 지망한 팀이 유저를 선택한 팀과 일치하는지 유효성 체크.
+	 *
+	 * @param team        유저를 선택한 팀
+	 * @param pickedUsers 선택된 유저 목록
+	 * @return 일치여부
+	 */
+	private static boolean isChosenTeam(Team team, List<User> pickedUsers) {
+		final RoundStatus roundStatus = team.getRoundStatus();
+		if (RoundStatus.ADJUSTED_ROUND == roundStatus) {
+			return true;
+		}
+
+		for (final User user : pickedUsers) {
+			if (!Objects.equals(user.findChoiceTeam(roundStatus.getWeight()).getTeam().getTeamUuid(),
+				team.getTeamUuid())) {
+				return false;
+			}
+		}
+
+		return true;
 	}
 
 	@Transactional(readOnly = true)
@@ -79,41 +119,17 @@ public class TeamBuildingService {
 		final Team team = teamRepository.findByTeamUuid(teamUuid)
 			.orElseThrow(ExceptionInfo.INVALID_TEAM_UUID::exception);
 
-		if (pickedUsers.size() != userUuids.size() || !isChosenTeam(team, pickedUsers)) {
+		if (!isValidUser(userUuids, pickedUsers) || !isChosenTeam(team, pickedUsers)) {
 			throw ExceptionInfo.BAD_REQUEST_FOR_USER_PICK.exception();
 		}
 
-		team.addUsers(pickedUsers);
 		for (final User user : pickedUsers) {
 			user.addTeam(team);
 		}
+		team.updateRoomStatus();
 
 		return UserPickResponse.builder()
-			.userInfoList(team.getUsers().stream().map(TeamBuildingService::makeUserInfo).collect(Collectors.toList()))
+			.userInfoList(team.getUsers().stream().map(TeamBuildingService::makeUserInfo).toList())
 			.build();
-	}
-
-
-	/**
-	 * 선택된 유저가 현재 라운드에서 지망한 팀이 유저를 선택한 팀과 일치하는지 유효성 체크.
-	 *
-	 * @param team        유저를 선택한 팀
-	 * @param pickedUsers 선택된 유저 목록
-	 * @return 일치여부
-	 */
-	private boolean isChosenTeam(Team team, List<User> pickedUsers) {
-		final RoundStatus roundStatus = team.getRoundStatus();
-		if (RoundStatus.ADJUSTED_ROUND == roundStatus) {
-			return true;
-		}
-
-		for (final User user : pickedUsers) {
-			if (!Objects.equals(user.findChoiceTeam(roundStatus.getWeight()).getTeam().getTeamUuid(),
-				team.getTeamUuid())) {
-				return false;
-			}
-		}
-
-		return true;
 	}
 }
